cart-visualizer/style.css
:root {
  --y-spacing: 0px;
  --x-spacing: 0px;
  --map-color: 0.8;
}

body {
  text-align: center;
  background: #0f0f23;
  color: rgb(207, 207, 207);
  min-height: 100vh;
  font-family: 'Source Code Pro', monospace;
  box-sizing: border-box;
}

h3 {
  margin: 0;
}

h1,
h3,
h4 {
  font-weight: 300;
}

#left-hud {
  position: fixed;
  top: 0;
  left: 0;
  opacity: 0;
  transition: opacity 0.05s;
  padding: 0 1rem;
  background: rgba(19, 19, 25, 0.7);
  text-align: left;
  border-radius: 5px;
  padding-bottom: 1rem;
}

#log {
  padding: 0 1rem;
  position: fixed;
  top: 0;
  right: 0;
  opacity: 0;
  transition: opacity 0.05s;
  background: rgba(19, 19, 25, 0.7);
  border-radius: 5px;
}

#log h4 {
  font-size: 1.1em;
}

#log-list {
  padding: 0;
  list-style: none;
}

#map-input {
  resize: none;
  background: #131319;
  color: #ddd;
  border: 1px solid rgba(221, 221, 221, 0.5);
  border-radius: 5px;
  display: block;
  outline-color: #ddd;
  margin: -2rem auto 1.5rem auto;
  transition: all 0.1s ease-in-out;
  text-align: center;
  width: 15rem;
  padding: 1rem 0 0 0;
}

#input-submit,
#auto-button,
#auto-speed,
#reset-map-settings {
  font-size: 110%;
  font-family: 'Source Code Pro', monospace;
  background: #131319;
  color: #ddd;
  border: 1px solid rgba(221, 221, 221, 0.5);
  border-radius: 3px;
  padding: 5px;
  outline-color: #ddd;
}

#tick-setting {
  font-family: 'Source Code Pro', monospace;
  background: #131319;
  font-size: 110%;
  padding: 5px;
  color: #ddd;
  outline-color: #ddd;
  border: 1px solid rgba(221, 221, 221, 0.5);
  border-radius: 3px;
  margin: 1rem 0;
  transition: all 0.1s ease-in-out;
  width: 6rem;
  min-height: 1rem;
}

#auto-button,
#auto-display {
  white-space: pre-wrap;
  margin: 0;
  display: none;
  opacity: 0;
  transition: all 0.1s ease-in-out;
}

#auto-speed {
  width: 6rem;
  padding: 4.4px;
  transition: all 0.1s ease-in-out;
}

#map {
  white-space: pre-wrap;
  text-align: center;
  transition: opacity 0.25s ease-in-out;
}

.disabled {
  transform: scaleY(0);
}

.cart {
  font-weight: 900;
  color: #00cc00;
  text-shadow: 0 0 7px rgba(106, 236, 147, 0.5), 0 0 2px #00cc00;
  z-index: 10;
}

#map p {
  margin-top: var(--y-spacing);
  margin-bottom: var(--y-spacing);
  letter-spacing: var(--x-spacing);
  color: rgba(230, 230, 230, var(--map-color));
  z-index: -1;
}

.star {
  color: #ffff66;
  transition: opacity 1s ease-in-out;
}

.transparent {
  opacity: 0;
}

#input-submit:hover,
#auto-button:hover,
#reset-map-settings:hover {
  box-shadow: 0 0 10px rgba(236, 236, 236, 0.5);
  text-shadow: 0 0 10px rgba(236, 236, 236, 0.5);
}

#input-submit:active,
#auto-button:active,
#reset-map-settings:active {
  transform: translateY(1px);
}

.link {
  color: #ddd;
  text-shadow: 0 0 4px #ddd;
  text-decoration: none;
  transition: all 0.15s;
}

.disabled-link {
  text-shadow: none;
}

.link:hover {
  color: #fff;
  text-shadow: 0 0 5px #fff;
}

#left-hud h4 {
  font-size: 1.1em;
}

#map-settings-header {
  text-align: center;
  margin-bottom: 0.7rem;
}

/* #map-settings-header::before {
  display: block;
  content: '---';
  height: 10px;
  transform: translateY(-150%);
  color: #ddd;
} */

.map-setting-label {
  text-align: center;
  display: block;
  font-size: 0.85em;
  margin: 0;
}

.map-slider {
  display: block;
  width: 100%;
  opacity: 0.75;
  transform: scale(0.85);
  margin: 0;
}

#reset-map-settings {
  width: 100%;
  margin-top: 0.7rem;
  font-size: 90%;
  text-align: center;
}

@media only screen and (max-width: 1250px) {
  html {
    font-size: 80%;
  }
}

@media only screen and (max-width: 1000px) {
  html {
    font-size: 60%;
  }
  #map-input {
    width: 25rem;
    padding-top: 1.5rem;
  }
}

@media only screen and (max-width: 750px) {
  html {
    font-size: 50%;
  }
  p {
    font-size: 80%;
  }
}

@media only screen and (max-width: 500px) {
  html {
    font-size: 40%;
  }
  p {
    font-size: 60%;
  }
}

